--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,4 +127,6 @@ dependencies {
     // Lifecycle components
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.1"
+    //Fingerprint access
+    implementation "androidx.biometric:biometric:1.1.0"
 }
