--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,4 +129,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.1"
     //Fingerprint access
     implementation "androidx.biometric:biometric:1.1.0"
+    //room db
+    def room_version = "2.4.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
